--- a/src/app/view/ventas/presupuesto/presupuesto.component.html
+++ b/src/app/view/ventas/presupuesto/presupuesto.component.html
@@ -856,12 +856,13 @@
 <!-- Modal Eliminar Presupuesto -->
 <div class="modal-backdrop" *ngIf="mostrarModalEliminar" (click)="cerrarModalEliminar()"></div>
 <div class="modal-eliminar" *ngIf="mostrarModalEliminar">
-    <div class="modal-content">
         <div class="modal-header">
-            <h2>
-                <i class="bi bi-exclamation-triangle text-danger"></i>
+            <div class="header-left">
+                <h2>
+                    <i class="bi bi-exclamation-triangle text-danger"></i>
                 Eliminar Presupuesto
-            </h2>
+                </h2>
+            </div>
         </div>
         <div class="modal-body">
             <div class="warning-message">
@@ -884,5 +885,4 @@
                 <i class="bi bi-trash"></i> Eliminar Permanentemente
             </button>
         </div>
-    </div>
 </div>
